# unimrcp-unimrcp-ali

./: README.md
unimrcp-1.6.0/: Makefile  Makefile.in  config.status  configure  configure.ac  libtool
unimrcp-1.6.0/conf/: Makefile  Makefile.in  unimrcpserver.xml
unimrcp-1.6.0/data/: Makefile  Makefile.in
unimrcp-1.6.0/docs/: doxygen.conf
unimrcp-1.6.0/libs/: Makefile  Makefile.in
unimrcp-1.6.0/libs/NlsSdkCpp3.X/: CMakeLists.txt  readme.md
unimrcp-1.6.0/libs/NlsSdkCpp3.X/demo/: speechLongSynthesizerDemo.cpp  speechRecognizerDemo.cpp  speechSynthesizerDemo.cpp  speechTranscriberDemo.cpp
unimrcp-1.6.0/libs/apr-toolkit/: Makefile  Makefile.in  libaprtoolkit.la
unimrcp-1.6.0/libs/mpf/: Makefile  Makefile.in  libmpf.la
unimrcp-1.6.0/libs/mrcp-client/: Makefile  Makefile.in  libmrcpclient.la
unimrcp-1.6.0/modules/: Makefile  Makefile.in
unimrcp-1.6.0/plugins/: Makefile  Makefile.am  Makefile.in
unimrcp-1.6.0/plugins/alirecog/: Makefile  Makefile.am  Makefile.in  alirecog.la
unimrcp-1.6.0/plugins/alirecog/.libs/: alirecog.lai  alirecog.so.0.6.0
unimrcp-1.6.0/plugins/alirecog/include/: AliEngine.h  Ali_channel.h  Ali_channel_factory.h  Ali_define.h  RecogEngine.h
unimrcp-1.6.0/plugins/alirecog/src/: AliEngine.cpp  AliEngine.lo  Ali_channel.cpp  Ali_channel.lo  Ali_channel_factory.cpp  Ali_channel_factory.lo  Ali_recog_engine.cpp  Ali_recog_engine.lo  Ali_recog_pool.cpp  Ali_recog_pool.lo
unimrcp-1.6.0/plugins/alirecog/src/.deps/: AliEngine.Plo  Ali_channel.Plo  Ali_channel_factory.Plo  Ali_recog_engine.Plo  Ali_recog_pool.Plo
unimrcp-1.6.0/plugins/alisynth/: Makefile  Makefile.am  Makefile.in  alisynth.la
unimrcp-1.6.0/plugins/alisynth/.libs/: alisynth.lai  alisynth.so.0.6.0
unimrcp-1.6.0/plugins/alisynth/include/: Ali_SynthChannel.h  Ali_SynthChannelFactory.h  Ali_SynthEngine.h  Ali_define.h  SynthEngine.h
unimrcp-1.6.0/plugins/alisynth/src/: Ali_SynthChannel.cpp  Ali_SynthChannel.lo  Ali_SynthChannelFactory.cpp  Ali_SynthChannelFactory.lo  Ali_SynthEngine.cpp  Ali_SynthEngine.lo  Ali_Synth_engine.cpp  Ali_Synth_engine.lo  Ali_Synth_pool.cpp  Ali_Synth_pool.lo  Ali_Synth_util.lo
unimrcp-1.6.0/plugins/alisynth/src/.deps/: Ali_SynthChannel.Plo  Ali_SynthChannelFactory.Plo  Ali_SynthEngine.Plo  Ali_Synth_engine.Plo  Ali_Synth_pool.Plo  Ali_Synth_util.Plo
unimrcp-1.6.0/plugins/demo-recog/: Makefile  Makefile.in  demorecog.la
unimrcp-1.6.0/plugins/demo-recog/.libs/: demorecog.lai  demorecog.so.0.6.0
unimrcp-1.6.0/plugins/demo-recog/src/: demo_recog_engine.lo
unimrcp-1.6.0/plugins/demo-synth/: Makefile  Makefile.in  demosynth.la
unimrcp-1.6.0/plugins/demo-synth/.libs/: demosynth.lai  demosynth.so.0.6.0
unimrcp-1.6.0/plugins/demo-synth/src/: demo_synth_engine.lo
unimrcp-1.6.0/plugins/demo-verifier/: Makefile  Makefile.in  demoverifier.la
unimrcp-1.6.0/plugins/demo-verifier/.libs/: demoverifier.lai  demoverifier.so.0.6.0
unimrcp-1.6.0/plugins/demo-verifier/src/: demo_verifier_engine.lo
unimrcp-1.6.0/plugins/mrcp-recorder/: Makefile  Makefile.in  mrcprecorder.la
unimrcp-1.6.0/plugins/mrcp-recorder/.libs/: mrcprecorder.lai  mrcprecorder.so.0.6.0
unimrcp-1.6.0/plugins/mrcp-recorder/src/: mrcp_recorder_engine.lo
unimrcp-1.6.0/tests/: Makefile  Makefile.in
(+136 files in other folders)
