MAINTAINERCLEANFILES   = Makefile.in

SUBDIRS                =

if ALISYNTH_PLUGIN
SUBDIRS               += alisynth
endif

if ALIRECOG_PLUGIN
SUBDIRS               += alirecog
endif

if DEMOVERIFIER_PLUGIN
SUBDIRS               += demo-verifier
endif

if RECORDER_PLUGIN
SUBDIRS               += mrcp-recorder
endif
